// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<Portal>
  <div
    data-component="flash"
    data-element="bar"
    data-role="baz"
  >
    <styled.div
      className=""
      variant="success"
    >
      <TransitionGroup
        childFactory={[Function]}
        component="div"
      >
        <CSSTransition
          appear={true}
          classNames="carbon-flash__slider"
          exit={true}
          key="1"
          timeout={
            Object {
              "appear": 500,
              "enter": 600,
              "exit": 600,
            }
          }
        >
          <styled.div
            key="slider"
          />
        </CSSTransition>
        <CSSTransition
          appear={true}
          classNames="carbon-flash__content"
          exit={true}
          key="2"
          timeout={
            Object {
              "enter": 700,
              "exit": 600,
            }
          }
        >
          <styled.div>
            <Styled(Icon)
              key="icon"
              type="tick"
            />
            <styled.div
              data-element="message"
              key="message"
            >
              <span>
                bun
                 
                <Styled(Link)
                  data-element="more-info"
                  onClick={[Function]}
                >
                  More Information
                </Styled(Link)>
              </span>
            </styled.div>
            <Styled(Icon)
              data-element="close"
              key="close"
              onClick={[Function]}
              type="close"
            />
          </styled.div>
        </CSSTransition>
      </TransitionGroup>
    </styled.div>
    <Alert
      ariaRole="dialog"
      autoFocus={true}
      data-element="info-dialog"
      key="bun"
      onCancel={[Function]}
      open={false}
      role="alertdialog"
      showCloseIcon={true}
      size="extra-small"
      title="bun"
    >
      dy
    </Alert>
  </div>
</Portal>
`;

exports[`Flash sliderHTML returns a div with the slider class names 1`] = `
<Portal>
  <div
    data-component="flash"
  >
    <styled.div
      className=""
      variant="success"
    >
      <TransitionGroup
        childFactory={[Function]}
        component="div"
      >
        <CSSTransition
          appear={true}
          classNames="carbon-flash__slider"
          exit={true}
          key="1"
          timeout={
            Object {
              "appear": 500,
              "enter": 600,
              "exit": 600,
            }
          }
        >
          <styled.div
            key="slider"
          />
        </CSSTransition>
        <CSSTransition
          appear={true}
          classNames="carbon-flash__content"
          exit={true}
          key="2"
          timeout={
            Object {
              "enter": 700,
              "exit": 600,
            }
          }
        >
          <styled.div>
            <Styled(Icon)
              key="icon"
              type="tick"
            />
            <styled.div
              data-element="message"
              key="message"
            >
              Danger Will Robinson!
            </styled.div>
            <Styled(Icon)
              data-element="close"
              key="close"
              type="close"
            />
          </styled.div>
        </CSSTransition>
      </TransitionGroup>
    </styled.div>
  </div>
</Portal>
`;
